test/regress/coverage-wave2-annotate-errors.test
; Wave 2 coverage tests for annotate.cc error paths
; Covers: duplicate price, duplicate date
; unclosed brace, unclosed bracket
; unclosed tag paren, double brace mismatch

; Test duplicate price annotation error
2024/01/01 Dup Price
    Assets:Test              1 FOO {$10.00} {$20.00}
    Assets:Cash

test bal -> 1
__ERROR__
While parsing file "$FILE", line 8:
While parsing posting:
  Assets:Test              1 FOO {$10.00} {$20.00}
                           ^^^^^^^^^^^^^^^^^^^^^^^
Error: Commodity specifies more than one price
end test
